// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Docker connector Wizard should render form 1`] = `
<div>
  <section
    class="wrapper"
  >
    <div
      class="StepWizard---main--SGVz StepWizard---navBar--2KYu"
    >
      <div
        class="StepWizard---navBarList--2ILN"
      >
        <div
          class="StepWizard---navStep--2trN StepWizard---activeStep--9-9V"
        >
          <span
            class="StepWizard---number--1LKy"
          >
            1
          </span>
          <p
            class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
            style="--text-line-clamp: 2; width: 240px;"
          >
            CONNECTOR DETAILS
          </p>
        </div>
        <div
          class="StepWizard---navStep--2trN"
        >
          <span
            class="StepWizard---number--1LKy"
          >
            2
          </span>
          <p
            class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
            style="--text-line-clamp: 2; width: 240px;"
          >
            AUTHENTICATION
          </p>
        </div>
        <div
          class="StepWizard---navStep--2trN"
        >
          <span
            class="StepWizard---number--1LKy"
          >
            3
          </span>
          <p
            class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
            style="--text-line-clamp: 2; width: 240px;"
          >
            VERIFY CONNECTION
          </p>
        </div>
        <div
          class="StepWizard---navStep--2trN"
        >
          <span
            class="StepWizard---number--1LKy"
          >
            4
          </span>
          <p
            class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
            style="--text-line-clamp: 2; width: 240px;"
          >
            ARTIFACT SOURCE
          </p>
        </div>
      </div>
      <div
        class="StepWizard---stepDetails--Uaxx"
      >
        <div
          class="Layout---vertical--3Szv Layout---layout-spacing-xxlarge--zgL2 StyledProps---main--1Wws firstep"
        >
          <div
            class="heading"
          >
            Docker Connector Details
          </div>
          <div>
            <div
              class="OverlaySpinner---overlaySpinner--3Bs3"
            >
              <form
                class="FormikForm---main--1N87"
              >
                <div>
                  <div
                    class="StyledProps---font--2ipy StyledProps---main--1Wws connectorForm"
                  >
                    <div
                      class="connectorFormNameWarpper"
                    >
                      <div
                        class="connectorFormNameElm"
                      >
                        <div
                          class="InputWithIdentifier---txtNameContainer--20iZ"
                        >
                          <div
                            class="Layout---horizontal--3rmQ StyledProps---main--1Wws InputWithIdentifier---txtIdContainer--2Ozd"
                          >
                            <p
                              class="StyledProps---font--2ipy StyledProps---main--1Wws"
                            >
                              ID
                              :
                            </p>
                            <span
                              class="InputWithIdentifier---idInput--w8_T"
                              contenteditable="true"
                            />
                            <span
                              class="bp3-icon bp3-icon-edit StyledProps---main--1Wws"
                              icon="edit"
                              style="vertical-align: middle;"
                            >
                              <svg
                                data-icon="edit"
                                height="12"
                                viewBox="0 0 16 16"
                                width="12"
                              >
                                <desc>
                                  edit
                                </desc>
                                <path
                                  d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </div>
                          <div
                            class="bp3-form-group"
                            data-id="name-0"
                          >
                            <label
                              class="bp3-label"
                              for="name"
                            >
                              Name
                               
                              <span
                                class="bp3-text-muted"
                              />
                            </label>
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="name"
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws StyledProps---margin-small--1ZqR StyledProps---padding-left-large--28UT StyledProps---padding-top-small--1-XA"
                      >
                        <p
                          class="StyledProps---font--2ipy StyledProps---main--1Wws link"
                        >
                          + Description
                        </p>
                        <p
                          class="StyledProps---font--2ipy StyledProps---main--1Wws link"
                        >
                          + Tags
                        </p>
                      </div>
                    </div>
                    <div
                      class="connectorFormElm"
                    />
                    <div
                      class="connectorFormElm"
                    />
                  </div>
                  <button
                    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws saveBtn"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      Save And Continue
                    </span>
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Create Docker connector Wizard should render form 2`] = `
<div>
  <section
    class="wrapper"
  >
    <div
      class="StepWizard---main--SGVz StepWizard---navBar--2KYu"
    >
      <div
        class="StepWizard---navBarList--2ILN"
      >
        <div
          class="StepWizard---navStep--2trN StepWizard---activeStep--9-9V"
        >
          <span
            class="StepWizard---number--1LKy"
          >
            1
          </span>
          <p
            class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
            style="--text-line-clamp: 2; width: 240px;"
          >
            CONNECTOR DETAILS
          </p>
        </div>
        <div
          class="StepWizard---navStep--2trN"
        >
          <span
            class="StepWizard---number--1LKy"
          >
            2
          </span>
          <p
            class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
            style="--text-line-clamp: 2; width: 240px;"
          >
            AUTHENTICATION
          </p>
        </div>
        <div
          class="StepWizard---navStep--2trN"
        >
          <span
            class="StepWizard---number--1LKy"
          >
            3
          </span>
          <p
            class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
            style="--text-line-clamp: 2; width: 240px;"
          >
            VERIFY CONNECTION
          </p>
        </div>
        <div
          class="StepWizard---navStep--2trN"
        >
          <span
            class="StepWizard---number--1LKy"
          >
            4
          </span>
          <p
            class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
            style="--text-line-clamp: 2; width: 240px;"
          >
            ARTIFACT SOURCE
          </p>
        </div>
      </div>
      <div
        class="StepWizard---stepDetails--Uaxx"
      >
        <div
          class="Layout---vertical--3Szv Layout---layout-spacing-xxlarge--zgL2 StyledProps---main--1Wws firstep"
        >
          <div
            class="heading"
          >
            Docker Connector Details
          </div>
          <div>
            <div
              class="OverlaySpinner---overlaySpinner--3Bs3"
            >
              <form
                class="FormikForm---main--1N87"
              >
                <div>
                  <div
                    class="StyledProps---font--2ipy StyledProps---main--1Wws connectorForm"
                  >
                    <div
                      class="connectorFormNameWarpper"
                    >
                      <div
                        class="connectorFormNameElm"
                      >
                        <div
                          class="InputWithIdentifier---txtNameContainer--20iZ"
                        >
                          <div
                            class="Layout---horizontal--3rmQ StyledProps---main--1Wws InputWithIdentifier---txtIdContainer--2Ozd"
                          >
                            <p
                              class="StyledProps---font--2ipy StyledProps---main--1Wws"
                            >
                              ID
                              :
                            </p>
                            <span
                              class="InputWithIdentifier---idInput--w8_T"
                              contenteditable="true"
                            >
                              dummy_name
                              
                            </span>
                            <span
                              class="bp3-icon bp3-icon-edit StyledProps---main--1Wws"
                              icon="edit"
                              style="vertical-align: middle;"
                            >
                              <svg
                                data-icon="edit"
                                height="12"
                                viewBox="0 0 16 16"
                                width="12"
                              >
                                <desc>
                                  edit
                                </desc>
                                <path
                                  d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </div>
                          <div
                            class="bp3-form-group"
                            data-id="name-0"
                          >
                            <label
                              class="bp3-label"
                              for="name"
                            >
                              Name
                               
                              <span
                                class="bp3-text-muted"
                              />
                            </label>
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="name"
                                  type="text"
                                  value="dummy name"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws StyledProps---margin-small--1ZqR StyledProps---padding-left-large--28UT StyledProps---padding-top-small--1-XA"
                      >
                        <p
                          class="StyledProps---font--2ipy StyledProps---main--1Wws link"
                        >
                          + Description
                        </p>
                        <p
                          class="StyledProps---font--2ipy StyledProps---main--1Wws link"
                        >
                          + Tags
                        </p>
                      </div>
                    </div>
                    <div
                      class="connectorFormElm"
                    />
                    <div
                      class="connectorFormElm"
                    />
                  </div>
                  <button
                    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws saveBtn"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      Save And Continue
                    </span>
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
